k8s-manifests/platform/monitoring/alertmanager-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: alertmanager-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: alertmanager-basic-auth
    realm: k8s-testwork Alertmanager
    removeHeader: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-alertmanager-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: alertmanager.k3s-test-cluster.yaryzhenko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
  tls:
    - hosts:
        - alertmanager.k3s-test-cluster.yaryzhenko.com
      secretName: alertmanager-tls
